<resources>
    <string name="app_name">Capstone</string>
    <string name="inventory_tracker">Inventory Tracker</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="please_enter_username">Please enter Username</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="validate">Validate</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="continue_str">Continue</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="workplace_address_line_1">Workplace Address Line 1</string>
    <string name="workplace_address_line_2">Workplace Address Line 2</string>
    <string name="please_enter_name">Please enter Name</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_contact">Please enter Contact number</string>
    <string name="please_enter_10_digit_contact">Please enter 10 digit Contact Number</string>
    <string name="please_enter_address">Please enter Address</string>
    <string name="workplace_contact_no">Workplace Contact no</string>
    <string name="please_select_user_type">Please select User Type</string>
    <string name="please_enter_workplace_name">Please enter Workplace Name</string>
    <string name="please_enter_workplace_contact_number">Please enter Workplace Contact Number</string>
    <string name="please_enter_workplace_address">Please enter Workplace Address</string>
    <string name="address">Address</string>
    <string name="usertype">User Type</string>
    <string name="workplace_name">Workplace Name</string>
    <string name="submit">Submit</string>
    <string name="workplace_address">Workplace Address</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="alert_text_message">Are you sure to validate the chosen credentials? You will not be able to change them later.</string>
    <string name="please_choose_another_username">Please choose another username</string>
    <string name="invalid_credentials">Invalid Credentials, please try again</string>
    <string name="something_went_wrong">Something went wrong on server side</string>
    <string name="user_registeration_success">User Registered successfully</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="user_id">User Id</string>
    <string name="workplace_id">Workplace ID</string>
    <string name="logout">Log Out</string>
    <string name="logout_alert">Are you sure you want to logout?</string>
    <string name="role">Role</string>
    <string name="search_product">Search Product</string>
    <string name="view_cart">View Cart</string>
    <string name="please_enter_item_name">Please enter Item name to Search</string>
    <string name="item_not_found">Item not found</string>
    <string name="inv_master_not_found">Inventory Master not found</string>
    <string name="inventory_management">Inventory Management</string>
    <string name="orders">Orders</string>
    <string name="alert">Alert</string>
    <string name="inv_id">Inv ID</string>
    <string name="inv_name">Inv Name</string>
    <string name="dist_id">Dist ID</string>
    <string name="dist_name">Dist name</string>
    <string name="warehouse_id">Warehouse ID</string>
    <string name="w_name">Warehouse Name</string>
    <string name="w_address">Warehouse Address</string>
    <string name="w_contact">Warehouse Contact</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="item">Item</string>
    <string name="qty_not_entered">Please enter quantity before adding to cart</string>
    <string name="comment">Comments</string>
    <string name="enter_comments">enter_comments</string>
    <string name="item_added_cart">Item Added to cart successfully</string>
    <string name="qty">Quantity</string>
    <string name="order_date">Order date</string>
    <string name="yes">Yes</string>
    <string name="back_message">All progress will be lost. Are you sure to continue?</string>
    <string name="confirmation_message">Are you sure to continue with the order?</string>
    <string name="order_created_successfully">Order Created Successfully</string>
    <string name="no_orders_found">No orders found</string>
    <string name="order_id">Order ID</string>
    <string name="ordered_by">Orderd By</string>
    <string name="destination">Destination</string>
    <string name="status">Status</string>
    <string name="update_order">Update Order</string>
    <string name="please_enter_comments">Please enter comments</string>
    <string name="please_select_status">Please select status</string>
    <string name="please_add_some_comments">Please add some comments</string>
    <string name="total_inventory">Total Inventory</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="date">Date</string>
    <string name="item_id">Item ID</string>
    <string name="warehouse">Warehouse</string>
    <string name="history_for">History for</string>
    <string name="order_not_able_to_update">Order not available to be updated at your end</string>
    <string name="update_inventory">Update Inventory</string>
    <string name="order_items">Order Items</string>
    <string name="item_cancelled">Item Already marked as Cancelled</string>
    <string name="item_rejected">Item was Rejected</string>
    <string name="item_received">Item already Received</string>
    <string name="update">Update</string>
    <string name="update_inv_first">Please update status of the inventory</string>
    <string name="items_updated">Items Updated Successfully</string>
    <string name="no_history_found">Unable to fetch History records</string>
    <string name="qty_greater_entered">Quantity can not be greater than</string>
    <string name="available_qty">Available Quantity</string>
    <string name="description">Description</string>
    <string name="salts">Salts</string>
    <string name="place_order">Place Order</string>
    <string name="short_description">Short Description</string>
    <string name="please_select_inventory">Please Select Inventory</string>
    <string name="please_select">Please select</string>
    <string name="other">Other</string>
    <string name="please_enter_qty">Please enter quantity greater than 0</string>
    <string name="please_select_inv_to_be_updated">Please select an inventory to be updated</string>
    <string name="please_enter_inv_name">Please enter Inventory name</string>
    <string name="please_enter_short_desc">Please enter Short Description</string>
    <string name="please_enter_desc">Please enter Description</string>
    <string name="please_enter_salts">Please enter Salts</string>
    <string name="item_updated">Item Updated Successfully</string>
</resources>