<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register.RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_margin="2dp"
            android:padding="2dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:padding="2dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/username_et"
                    android:hint="@string/username"
                    android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:padding="2dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/password_et"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:padding="2dp">
            <Button
                android:id="@+id/validate_bt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorButton"
                android:textColor="@color/white"
                android:text="@string/validate"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:weightSum="6"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:padding="2dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/name_et"
                    android:hint="@string/name"
                    android:inputType="text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:padding="2dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/email_et"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:padding="2dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/contact_et"
                    android:hint="@string/contact_no"
                    android:inputType="number"
                    android:maxLength="10"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:padding="2dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/address1_et"
                    android:maxLength="30"
                    android:hint="@string/address_line_1"
                    android:inputType="text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:padding="2dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/address2_et"
                    android:hint="@string/address_line_2"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:padding="2dp">
                <Button
                    android:id="@+id/continue_bt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorButton"
                    android:textColor="@color/white"
                    android:text="@string/continue_str"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_margin="2dp"
            android:padding="2dp"/>
    </LinearLayout>

</LinearLayout>