<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dashboard.DashboardActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/update_inv_ll"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="2">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:background="@color/colorButton"
                android:text="@string/update_inventory"
                android:textColor="@color/white"
                android:id="@+id/update_inv_bt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/search_prod_ll"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="2">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorButton"
                android:text="@string/place_order"
                android:textColor="@color/white"
                android:id="@+id/search_product_bt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/inv_mgmt_ll"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="2">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:background="@color/colorButton"
                android:text="@string/inventory_management"
                android:textColor="@color/white"
                android:id="@+id/inventory_management_bt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/orders_ll"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="2">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:background="@color/colorButton"
                android:text="@string/orders"
                android:textColor="@color/white"
                android:id="@+id/orders_bt"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>