<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:weightSum="5"
        android:background="@drawable/card_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/user_id"
                android:layout_weight="0.6"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:id="@+id/user_id_tv"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/name"
                android:layout_weight="0.6"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:id="@+id/user_name_tv"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/status"
                android:layout_weight="0.6"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:id="@+id/status_tv"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/date"
                android:layout_weight="0.6"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:id="@+id/update_date_tv"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/comment"
                android:layout_weight="0.6"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:id="@+id/comment_tv"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>